# LFDT-coding-challenge

./: Cargo.toml  readme.md
examples/: demo.rs
src/: ciphertext.rs  decrypt.rs  encrypt.rs  error.rs  expand.rs  lib.rs  tests.rs
